Closed Bug 876519 Opened 11 years ago Closed 11 years ago

don't include iostream in the profiler when we don't need it

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: tbsaunde, Assigned: tbsaunde)

Details

Attachments

(1 file)

same as bug 809967 it causes static initializers and ostream builds just fine here too.
Attachment #754588 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/8f699ea7e0c6
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: