bug 876519 - include ostream instead of iostream in the profiler to get rid of static initializers r=ehsan